# CG_Engine

./: .gitignore  CMakeLists.txt  Setup Assimp.md  clean  experemental.cpp  main.cpp  saver  saver.cpp  scene.h  super.cpp  test.cpp  tester  tester.cpp  todo.md  vertex.txt
CG_Engine_Core/: CMakeLists.txt
CG_Engine_Core/includes/CG_Engine_Core/: camera.h  shader.h  test.hpp
CG_Engine_Core/includes/CG_Engine_Core/math/: common.h  mat2x2.h  mat4x4.h  vec2.h  vec4.h
CG_Engine_Core/includes/CG_Engine_Core/model/: mesh.h  model.h
CG_Engine_Core/includes/CG_Engine_Core/vertex/: varray.h  vbuffer.h  vearray.h
CG_Engine_Editor/: CMakeLists.txt
CG_Engine_Editor/src/: main.cpp  saver
includes/CG_Engine/: engine.cpp  engine.h  events.h  glmemory.h  gui.h  objectManager.h  scene.h  source.h  timer.h
includes/CG_Engine/UI/: camera.h  gui.h  mouse.h
includes/CG_Engine/base/: Entity.h  baseComponent.h  baseSystem.h  compFactory.h  compList.h  entityManager.h  types.h
includes/CG_Engine/components/: camera.h  directionalLight.h  keyMotion.h  meshRenderer.h  modelRenderer.h  name.h  pointLight.h  spotLight.h  spriteRenderer.h  transform.h
includes/CG_Engine/ecs/: ecs.h
includes/CG_Engine/ecs/base/: Entity.h  EntityManager.h  baseComponent.h  baseSystem.h  compList.h  types.h
includes/CG_Engine/events/: events.h
includes/CG_Engine/math/: common.h  mat2x2.h  mat3x3.h  mat4x4.h  vec2.h  vec3.h  vec4.h
includes/CG_Engine/models/: box.h  cube.h  gun.h  lamp.h  plane.h  skybox.h  sphere.h
includes/CG_Engine/objects/: mesh.h  model.h  quad.h
includes/CG_Engine/render/: frameBuffer.h  light.h  material.h  shader.h  vArray.h  vertex.h
includes/CG_Engine/systems/: camera.h  common.h  directionalLightSystem.h  input.h  meshSystem.h  modelSystem.h  pointLightSystem.h  spotLightSystem.h  spriteRendererSystem.h
includes/CG_Engine/ui/: camera.h  gui.h  input.h  keyboard.h  mouse.h
includes/CG_Engine/vertex/: memory.h  varray.h  vbuffer.h  vearray.h
includes/CG_Engine_Core/: camera.h  glmemory.h  light.h  mesh.h  model.h  shader.h
includes/CG_Engine_Core/UI/: camera.h  keyboard.h  mouse.h  screen.h
includes/CG_Engine_Core/algo/: bounds.h  list.h  octree.h  states.h  trie.h
includes/CG_Engine_Core/math/: mat3x3.h  mat4x4.h  vec3.h
includes/CG_Engine_Core/models/: box.h  cube.h  gun.h  lamp.h  modelarray.h  sphere.h
includes/CG_Engine_Core/objects/: mesh.h  model.h
includes/CG_Engine_Core/phy/: evn.h  rigidbody.h
includes/CG_Engine_Core/physics/: rigidbody.h
includes/CG_Engine_Core/render/: light.h  material.h  shader.h  texture.h
res/shader/: fShader.glsl  lCube.vert  vShader.glsl
src/libs/camera/: camera.h
src/libs/math/: mat2x2.h  mat3x3.h  mat4x4.h  vec2.h  vec3.h  vec4.h
src/libs/model/: mesh.h  model.h
src/libs/shader/: shader.h
src/libs/shader/exec/: fShader.glsl  vShader.glsl
src/libs/test/: catch.hpp
src/libs/vertex/: varray.h  vbuffer.h
templates/: imgui_sfml.h.in
